--- a/css/general.css
+++ b/css/general.css
@@ -74,7 +74,7 @@ li {
   -ms-flex-align: center;
   align-items: center;
   background-color: #0e1d42;
-  background-image: url('https://data.mypinata.cloud/ipfs/QmVzBQWzGVcKCdMY2ubh8wRt6hXazpWS1SxEMaBQp6cbnM');
+  background-image: url('Projectx1122/TheSmokiesClub/Background main/ezgif.com-gif-maker (1).gif');
   background-repeat: no-repeat;
   background-size: cover;
   color: rgb(60, 148, 53);
@@ -314,7 +314,7 @@ li {
   position: relative;
   padding: 120px 24px 180px;
   background-color: rgb(115, 145, 9);
-  background-image: url('../images/pattern-bg.png');
+  background-image: url('Projectx1122/TheSmokiesClub/Small gola/ezgif.com-gif-maker (2).gif');
   background-position: 50% 50%;
   background-size: auto;
 }
