--- a/css/general.css
+++ b/css/general.css
@@ -74,7 +74,7 @@ li {
   -ms-flex-align: center;
   align-items: center;
   background-color: #0e1d42;
-  background-image: url('https://github.com/Projectx1122/TheSmokiesClub/blob/main/Background%20main/ezgif.com-gif-maker%20(1).gif');
+  background-image: url('https://raw.githubusercontent.com/Projectx1122/TheSmokiesClub/71b082c25dcbab423649a43b57016a90925ef87d/Background%20main/ezgif.com-gif-maker%20(1).gif');
   background-repeat: no-repeat;
   background-size: cover;
   color: rgb(60, 148, 53);
@@ -314,7 +314,7 @@ li {
   position: relative;
   padding: 120px 24px 180px;
   background-color: rgb(115, 145, 9);
-  background-image: url('https://github.com/Projectx1122/TheSmokiesClub/blob/main/Small%20gola/ezgif.com-gif-maker%20(2).gif');
+  background-image: url('https://raw.githubusercontent.com/Projectx1122/TheSmokiesClub/main/Small%20gola/ezgif.com-gif-maker%20(2).gif');
   background-position: 50% 50%;
   background-size: auto;
 }
