--- a/css/general.css
+++ b/css/general.css
@@ -314,7 +314,7 @@ li {
   position: relative;
   padding: 120px 24px 180px;
   background-color: rgb(115, 145, 9);
-  background-image: url('https://raw.githubusercontent.com/Projectx1122/TheSmokiesClub/main/Small%20gola/ezgif.com-gif-maker%20(2).gif');
+  background-image: url('https://raw.githubusercontent.com/Projectx1122/TheSmokiesClub/main/Background%20main/mint%20back.jpeg');
   background-position: 50% 50%;
   background-size: auto;
 }
