--- a/css/general.css
+++ b/css/general.css
@@ -74,7 +74,7 @@ li {
   -ms-flex-align: center;
   align-items: center;
   background-color: #0e1d42;
-  background-image: url('https://raw.githubusercontent.com/Projectx1122/TheSmokiesClub/71b082c25dcbab423649a43b57016a90925ef87d/Background%20main/ezgif.com-gif-maker%20(1).gif');
+  background-image: url('https://raw.githubusercontent.com/Projectx1122/TheSmokiesClub/main/Background%20main/2.png');
   background-repeat: no-repeat;
   background-size: cover;
   color: rgb(60, 148, 53);
